ecmascript/parser/tests/test262-error-references/fail/5fae862d7fe6531c.js.stderr
error: TS1005
 --> $DIR/tests/test262-parser/fail/5fae862d7fe6531c.js:1:5
  |
1 | ({a = 0}, {a = 0}, 0) => 0
  |     ^

